--- a/task3.html
+++ b/task3.html
@@ -5,29 +5,41 @@
 <meta http-equiv="Content-Type"  content="text/html; charset=utf-8">
 <title>魔镜</title>
 <style type="text/css">
-body{background:#68cdd5;color:white;}
+body{background:#68cdd5;color:white;
+     width:750px;
+     border:1px solid red;
+ }
 .pc1{float:left;
      position:absolute;
-     left:7%;}
-
+     left:7%;
+    }
 
 .pc2{float:left;
      position:absolute;
      left:35%;
      top:15%;
-}
+    }
 .pc3{float:left;
      position:absolute;
      left:20%; 
-     bottom:20%;    
-}
+     bottom:10%;
+     width: 5em;
+     border: 30px solid transparent;
+     text-align: center;  
+     transform: translateX(-30%);
+    }
 .pc4{float:left;
      position:absolute;
-     right:20%;
-     bottom:20%;   
-}
+     right:25%;
+     bottom:10%;  
+     width: 5em;
+     border: 30px solid transparent;
+     text-align: center; 
+     transform: translateX(30%);
+     
+    }
 .txt{
-    width:60%px;
+    width:60%;
     position:absolute;
     left:18%;
     top:30%;
@@ -35,14 +47,35 @@ body{background:#68cdd5;color:white;}
     border:none; 
     font-size:130%;
     font-family:"宋体";
-    line-height:2em;}
+    line-height:2em;
+    }
+.desc{
+    width:60%;
+    position:relative;
+    margin: 1px auto;
+    font-size:130%;
+    font-family:"宋体";
+    line-height:2em;
+    transform: translateX(-40%);
+  }
+.clear{clear:both;
+        overflow:hidden;}
 </style>
 </head>
 <body>
- <img class="pc1" src="http://e.hiphotos.baidu.com/image/pic/item/a8014c086e061d954e1bd64b73f40ad162d9ca60.jpg">
- <img class="pc2" src="http://e.hiphotos.baidu.com/image/pic/item/a8014c086e061d954eb4d64b73f40ad163d9cad7.jpg">
+
+ <img class="pc1" src="./images/task3_pc1.png">
+ <img class="pc2" src="./images/task3_pc2.png">
  <p class="txt">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，一下线下聚会桌游道具。</p>
- <img class="pc3" src="http://a.hiphotos.baidu.com/image/pic/item/4afbfbedab64034f606e2275a7c379310a551d25.jpg">
- <img class="pc4" src="http://g.hiphotos.baidu.com/image/pic/item/838ba61ea8d3fd1f97964249384e251f95ca5f22.jpg">
+ <div class="pc3">
+     <img class="pc3" src="./images/task3_pc3.png">
+     <div class="desc">  290560922 </div>
+ </div>
+ <div class="pc4">
+     <img class="pc4" src="./images/task3_pc4.png">
+   <div class="desc"> BJPTTeng </div>
+ </div>
+ <div class="clear"></div>
+
 </body>
 </html>
