--- a/task5-1.html
+++ b/task5-1.html
@@ -3,81 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type"  content="text/html; charset=utf-8">
-<title>task5-1</title>
-<style type="text/css">
-*{
-    margin: 0;
-    padding: 0; 
-}
-body{
-    width: 100%;
-    min-width: 320px;
-    max-width: 720px;
-    font-family: "Microsoft";
-    font-size: 25px;
-    color: white;
-    background: #eff0f4;
-}
-div.daohang{
-    width: 100%;
-    background-color: #5fc0cd;
-    padding-top: 55px;
-    padding-bottom: 25px;
-}
-.pc1{
-    position: absolute;
-    top: 45px;
-    left: 25px;
-}
-div.bg{
-    background: url(./images/task5_pc5.png) 100% 100% ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 326px;
-}
-.pc4{float: left;
-    position:relative;
-    top: 15%;
-    left: 3%;
-}
-div.jc{
-    position: relative;
-    top:42%;
-    left: 11%;
-}
-table tr th,td{
-    color: black;
-    border-bottom: 1px solid #bebec2 ;   
-    padding: 25px;
-}
-.nonewline{
-    word-break: keep-all;
-}
-.pc3{
-    width: 18px;
-}
-.rb{
-    border-right: 1px  solid #bebec2 ;  
-    padding-right: 35px; 
-}
-.dingwei{
-    position: relative;
-    top: 120px;
-    left: 25px;
-}
-.dibu{
-    font-size: 35px;
-    padding: 31px 108px;
-    border: 2px #5fc0cd solid;
-    border-radius: 15px;
-    margin-bottom: 25px;
-}
-</style>
-</head>
 
+<title>task5-1</title>
+
+</head>
+<link rel="stylesheet" type="text/css" href="task5-1.css">
 <body>
-<div class="daohang">
+<div class="all">
+<div class="topnav">
    <img class="pc1" src="./images/task5_pc1.png">
    <span style="position: relative;left: 40%;" >个人主页</span>
 </div>
@@ -122,8 +55,9 @@ table tr th,td{
    </tr>
 </table>
 <div class="dingwei">
-      <span class="dibu" style="color: #5fc0cd; ">留言</span>
-      <span class="dibu"  style="color: #ffffff; background: #5fc0cd; ">电话联系</span>
+      <span class="footer" style="color: #5fc0cd; ">留言</span>
+      <span class="footer"  style="color: #ffffff; background: #5fc0cd; ">电话联系</span>
 </div >
+</div>
 </body>
 </html>
