--- a/task9.html
+++ b/task9.html
@@ -37,37 +37,155 @@
 </div>
 
 
+<div class="s-body">
+	<dl>
+		<dt class="s-body-title">请您按照以下步骤来定制您的纸箱</dt>
+		<dd class="s-step1">
+			<img class="s-step1_img" src="./images/task9_img1.png">
+			<span>选择箱型</span>
+		</dd>
+		<dd class="s-step1-select">
+			<form>
+				<input  class="select-type" type="radio" value="对口箱" name="radio">
+				<label>对口箱</label>
+				<input class="select-type"  type="radio" value="飞机盒" name="radio">
+				<label>飞机盒</label>
+				<input class="select-type"  type="radio" value="天地盖" name="radio">
+				<label>天地盖</label>
+			</form>
+			<form >
+				<select style="" class="select-details">
+					<option value="查看详情" selected="selected">查看详情</option>
+					<option value="第二项">第二项</option>
+					<option value="第三项">第三项</option>
+				</select>
+				
+			</form>
+		
+
+		</dd>
+		<div class="clear"></div>
+		<dd class="s-step1">
+			<img class="s-step1_img" src="./images/task9_img2.png">
+			<span>确定尺寸</span>
+		</dd>
+		<dd class="s-step2-select">
+			<ul>
+				<li>
+					<form>
+						<input type="radio" value="外径" name="">
+						<label>外径</label>
+						<span>长</span>
+						<input type="text" name="">
+						<label>mm</label>
+						<span>宽</span>
+						<input type="text" name="">
+						<label>mm</label>
+						<span>高</span>
+						<input type="text" name="">
+						<label>mm</label>
+					</form>
+				</li>
+				<li>
+					<form >
+						<input type="radio" value="内径" name="">
+						<label>内径</label>
+						<span>长</span>
+						<input type="text" name="">
+						<label>mm</label>
+						<span>宽</span>
+						<input type="text" name="">
+						<label>mm</label>
+						<span>高</span>
+						<input type="text" name="">
+						<label>mm</label>
+					</form>
+				</li>
+			</ul>
+		</ul>
+
+		<form class="s-step2-details">
+			<select >
+				<option value="查看详情" selected="selected">查看详情</option>
+				<option value="第二项">第二项</option>
+				<option value="第三项">第三项</option>
+			</select>
+		</form>
+
+		
 
 
 
+		<div class="clear"></div>
+		<dd class="s-step1">
+			<img class="s-step1_img" src="./images/task9_img3.png">
+			<span>材质</span>
+		</dd>
+		<dd class="s-step1-select">
+			<form>
+				<input  class="select-type" type="radio" value="三层A瓦优质" name="radio">
+				<label>三层A瓦优质</label>
+				<input  class="select-type"type="radio" value="三层A瓦优质" name="radio">
+				<label>三层A瓦优质</label>
+				<input  class="select-type" type="radio" value="三层A瓦优质" name="radio">
+				<label>三层A瓦优质</label>
+				<input class="select-type" type="radio" value="三层A瓦优质" name="radio">
+				<label>三层A瓦优质</label>
+				<input  class="select-type" type="radio" value="三层A瓦优质" name="radio">
+				<label>三层A瓦优质</label>
+			</form>
+			<form class="s-step3-details">
+				<select>
+					<option value="查看详情" selected="selected">查看详情</option>
+					<option value="第二项">第二项</option>
+					<option value="第三项">第三项</option>
+				</select>
+			</form>
+		</dd>
+		<dd class="s-next">
+			<input  class="s-sumbit" type="submit" value="下一步" name="下一步">
+		</dd>
+	</dl>
+	<div class="select-details-bgdone">
+		<div class="bgd-white"></div>
+	</div>
+	<div class="select-details-bgdtwo">
+		<div class="bgd-white"></div>
+	</div>
+	<div class="select-details-bgdthree">
+		<div class="bgd-white"></div>
+	</div>
 
+</div>
 
-
-
-<div style="width: 100%;height: 500px;border:1px red solid;"> 1</div>
 
 <div class="clear"></div>
 
 
-<div class="public-footer">
-	<div class="public-footer-left1">技能树——改变你我</div>
-	<div class="public-footer-left2">关于我们<span>联系我们</span>合作企业</div>
+<div class="public-footer s-footer">
+	<div class="public-footer-left1 s-footer-left">51包装网—纸箱包装首选平台</div>
 	<div  class="public-footer-center">
-		<div class="public-footer-text">旗下网站</div>
-		<div> 
-			<span class="public-footer-text public-footer-border"> 草船云孵化器</span>
-			<span class="public-footer-text">最强IT特训营</span>
+		<div class="s-footer-text" >
+			<span>关于我们</span>
+			<span>配送流程</span>
+			<span>联系我们</span>
 		</div>
-		<div>
-			<span class="public-footer-text">葡萄藤轻游戏</span>
-			<span class="public-footer-text">桌游精灵</span>
+		<div> 
+			<span> 下单指南</span>
+			<span >媒体活动</span>
 		</div>
 	</div>
-	<div class="public-footer-right">
-		<div>微信公众平台</div>
+
+	<div class="public-footer-right ">
+		<ul>
+			<li>TEL:4000-0000-0000</li>
+			<li>企业QQ：123456789</li>
+			<li>微信号：XXXXXXXX</li>
+		</ul>
+		
 		<img class="public-footer-img" src="./images/task7-1_qr-code.png">
 	</div>
-	<div class="public-footer-bottom">Copyright  <span></span> 2015技能树 www.jnshu.com  All Rights  Reserved <span></span>京ICP备13005880号 </div>
+	<div class="public-footer-bottom s-footer-b">北京五一包装科技有限公司Copyright  <span></span> 2015        <span></span> 51baozhuang.com015  All Rights  Reserved <span></span>京ICP备13005880号 </div>
 </div>
 <div class="clear"></div>
 </body>
