--- a/task3.html
+++ b/task3.html
@@ -4,78 +4,26 @@
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type"  content="text/html; charset=utf-8">
 <title>魔镜</title>
-<style type="text/css">
-body{background:#68cdd5;color:white;
-     width:750px;
-     border:1px solid red;
- }
-.pc1{float:left;
-     position:absolute;
-     left:7%;
-    }
-
-.pc2{float:left;
-     position:absolute;
-     left:35%;
-     top:15%;
-    }
-.pc3{float:left;
-     position:absolute;
-     left:20%; 
-     bottom:10%;
-     width: 5em;
-     border: 30px solid transparent;
-     text-align: center;  
-     transform: translateX(-30%);
-    }
-.pc4{float:left;
-     position:absolute;
-     right:25%;
-     bottom:10%;  
-     width: 5em;
-     border: 30px solid transparent;
-     text-align: center; 
-     transform: translateX(30%);
-     
-    }
-.txt{
-    width:60%;
-    position:absolute;
-    left:18%;
-    top:30%;
-    margin-left:150;
-    border:none; 
-    font-size:130%;
-    font-family:"宋体";
-    line-height:2em;
-    }
-.desc{
-    width:60%;
-    position:relative;
-    margin: 1px auto;
-    font-size:130%;
-    font-family:"宋体";
-    line-height:2em;
-    transform: translateX(-40%);
-  }
-.clear{clear:both;
-        overflow:hidden;}
-</style>
+<link rel="stylesheet" type="text/css" href="task3.css">
 </head>
 <body>
+              <div class="all">
+                             <img class="pc1" src="./images/task3_pc1.png">
+                             <img class="pc2" style="display: block;" src="./images/task3_pc2.png">
 
- <img class="pc1" src="./images/task3_pc1.png">
- <img class="pc2" src="./images/task3_pc2.png">
- <p class="txt">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，一下线下聚会桌游道具。</p>
- <div class="pc3">
-     <img class="pc3" src="./images/task3_pc3.png">
-     <div class="desc">  290560922 </div>
- </div>
- <div class="pc4">
-     <img class="pc4" src="./images/task3_pc4.png">
-   <div class="desc"> BJPTTeng </div>
- </div>
- <div class="clear"></div>
+                             <p class="txt">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，一下线下聚会桌游道具。</p>
 
+                             <div class="number">
+                                 <img class="pc3" src="./images/task3_pc3.png">
+                                 <div class="desc">  290560922 </div>
+                             </div>
+
+                             <div class="number" >
+                                 <img class="pc4" src="./images/task3_pc4.png">
+                                 <div class="desc"> BJPTTeng </div>
+                             </div>
+
+                           <div class="clear"></div>
+             </div>
 </body>
 </html>
